[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caching_proxy"]

[project]
name = "caching-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "redis>=8.0.0",
    "requests>=2.34.2",
]

[project.scripts]
caching-proxy = "caching_proxy.cli:main"

[tool.uv]
package = true
